2017-02-17  Karl Berry  <karl@freefriends.org>

	* kpse-setup.m4 (_KPSE_RECURSE): do not add a package to
	CONF_SUBDIRS if --disable-PKG was given. Thus, the directory for a
	disabled package will no longer be descended into at all, as if it
	were nonexistent. This way, if a package's configure causes
	problems on some systems (like dvisvgm v2's new requirement for
	C++11), --disable-PKG can be given and work can go on.

2016-03-07  Karl Berry  <karl@tug.org>

	* kpse-pkgs (KPSE_UTILS_PKGS): add autosp.

2016-02-09  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* kpse-pkgs.m4 (KPSE_TEXK_PKGS): add upmendex.

2015-09-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-setup.m4: Allow LuaJIT for x86_64-cygwin.

2015-09-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-lib-version.m4 (KPSE_LIB_VERSION): Allow more general
	version number suffix strings, e.g., "-beta1".

2015-08-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_texk_pkgs): Add gregorio.

2015-08-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-setup.m4: Allow shared libraries (DLLs) in native TeXLive
	builds for Cygwin and MinGW.

2015-06-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-warnings.m4: Warning flags for gcc 5.x.
	* kpse-web2c.m4: Better handling of --disable-mf-nowin.
	* kpse-common.m4: Check if <ctype.h> declares isascii.
	* kpse-setup.m4: MFLuaJIT requires LuaJIT.
	* kpse-poppler-flags.m4: LuaTeX requires poppler 0.30 or better.

2015-03-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-web2c.m4: Add KPSE_WITH_XMF and KPSE_XMF_COND.

2015-03-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-graphite2-flags.m4: Does not depend on other libraries.
	* kpse-icu-flags.m4: Drop handling of a historic bug from V4.4.

2015-03-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-{kpathsea,ptexenc}-flags.m4: Use pkg-config.
	* kpse-common.m4 (_KPSE_PKG_CONFIG_FLAGS): Common code.

2015-03-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
